--- a/src/app/services/data-management/ServiceDetail.module.css
+++ b/src/app/services/data-management/ServiceDetail.module.css
@@ -300,3 +300,11 @@
   object-fit: cover;
   background: #222;
 }
+
+@media (max-width: 600px) {
+  .serviceTitle {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 0.7rem;
+  }
+}
