--- a/src/app/services/project-management/ServiceDetail.module.css
+++ b/src/app/services/project-management/ServiceDetail.module.css
@@ -114,6 +114,14 @@
   }
 }
 
+@media (max-width: 600px) {
+  .serviceTitle {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 0.7rem;
+  }
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
