--- a/src/app/request-service/RequestService.module.css
+++ b/src/app/request-service/RequestService.module.css
@@ -4,7 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 60px 20px;
+  padding: 2rem;
+  position: relative;
+  z-index: 2;
+  padding-top: 64px;
 }
 
 .content {
